# template_package

template_package/: CMakeLists.txt
template_package/nodes/: class_node_example.cpp
template_package/src/: template_class.cpp
